samples/_failures_safe/1761552715_dce776_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b825b8e6.c: In function ‘main’:
./samples/SAFE/__tmp_b825b8e6.c:148:12: error: missing terminating " character
  148 |     printf("Matrix-vector multiplication result: (%.2f, %.2f, %.2f
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b825b8e6.c:148:5: error: expected expression at end of input
  148 |     printf("Matrix-vector multiplication result: (%.2f, %.2f, %.2f
      |     ^~~~~~
./samples/SAFE/__tmp_b825b8e6.c:148:5: error: expected declaration or statement at end of input
